Add --seed flag for reproducible mutation testing (#119)
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: gliptak <50109+gliptak@users.noreply.github.com>